  * Add new long options in dpkg-buildpackage for any short option that is
    a useful configurable candidate.
  * Add configuration file support to dpkg-buildpackage, as buildpackage.conf
    under either the dpkg system or user configuration directories.
    Closes: #539692, #765494
  * Check that debian/tests/control is a regular file before parsing it.
  * Perl modules:
    - Use warnings::warnif() instead of carp() for deprecated warnings.
    - Add new format_range() method and deprecate dpkg() and rfc822() methods
      in Dpkg::Changelog.
    - Replace changelog program parsers with perl modules.
    - Add a getter for the Time::Piece object in Dpkg::Changelog.
    - Add new Timestamp field to Dpkg::Changelog output, which ends up on
      dpkg-parsechangelog's output.
    - Validate source version in set_version_substvars()'s Dpkg::Substvars
      method.
    - Revert "Dpkg::Conf: Switch implementation to be hash based", as this
      change broke backwards compatibility in multiple ways. The format_argv
      option was set by default, the order was not preserved, which was
      important for dpkg.cfg files, and duplicate option names stopped being
      supported. Add regression tests to avoid similar changes in the future.
      Closes: #824938
    - Add support for system and user config loading in Dpkg::Conf.
    - Add support for autopkgtest control files, with new CTRL_TESTS control
      type, new recognized fields to Dpkg::Control::Fields, and new modules
      Dpkg::Control::Tests and Dpkg::Control::Tests::Entry. Also update
      Dpkg::Index to support these.
  * Test suite:
    - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
      to 99999.
  * Documentation:
    - Improve dpkg-buildpackage(1) on environment expectations.
    - Clarify the format of the db:Status-Abbrev virtual field in
      dpkg-query(1). Closes: #824515
    - Document the tar entry size limitation for deb(5) format.